--- a/src/main/webapp/exerciser/registerForm.css
+++ b/src/main/webapp/exerciser/registerForm.css
@@ -26,42 +26,41 @@
     flex-direction: column;
 }
 
-.inputId {
+.inputInfo {
     display: block;
     width: 360px;
 
     border: none;
     border-bottom: 1px solid #B5B5B5;
     outline: none; /* 입력 시 테두리 지움*/
-    display: block;
     
     font-weight: 500;
     font-size: 14px;
-    color: #909090;
+    color: black;
 
     margin-bottom: 25px;
     padding-bottom: 10px;
 }
 
-.inputPW {
-    display: block;
-    width: 360px;
+ input[type=password] {
+	font-family: 'Nanum Gothic', san-serif !important;
+}
+
+.inputS {
+	display: inline-block;
+    width: 120px;
 
     border: none;
-    border-bottom: 1px solid #B5B5B5;
-    outline: none; /* 입력 시 테두리 지움*/
     
     font-weight: 500;
     font-size: 14px;
     color: #909090;
-
-    margin-bottom: 25px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .inputGender {
 	display: inline-block;
-    width: 60px;
+    width: 40px;
 
     border: none;
     
@@ -75,11 +74,23 @@
 
 .Stype {
     display: inline-block;
-    width: 80px;
+    width: 110px;
     border: 1px solid #909090;
     border-radius: 2.5px;
     padding: 3px;
-    margin-left: 20px;
+
+    font-size: 13px;
+    font-weight: 500;
+    color: #414141;
+    
+    margin-right:20px;
+}
+.Gtype {
+    display: inline-block;
+    width: 60px;
+    border: 1px solid #909090;
+    border-radius: 2.5px;
+    padding: 3px;
 
     font-size: 13px;
     font-weight: 500;
@@ -94,7 +105,7 @@
     
     font-weight: 500;
     font-size: 14px;
-    color: #909090;
+    color: black;
 
 	margin-top: 10px;
     margin-bottom: 10px;
@@ -123,9 +134,9 @@
 
 
 /* placeholder 폰트 색 변경, 크롬/엣지 둘 다 적용 */
-input::placeholder{color: #909090;}
-input::-webkit-input-placeholder {color: #909090;}
-input::-ms-input-placeholder{color: #909090;}
+input::placeholder{color: #909090; font-family: 'NanumSquare', sans-serif; }
+input::-webkit-input-placeholder {color: #909090; font-family: 'NanumSquare', sans-serif; }
+input::-ms-input-placeholder{color: #909090; font-family: 'NanumSquare', sans-serif; }
 
 #register_btn {
     background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
