--- a/src/main/webapp/css/myPageMenu.css
+++ b/src/main/webapp/css/myPageMenu.css
@@ -15,7 +15,8 @@
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
-    line-height: 40px;
+
+    margin-bottom: 20px;
     color: #414141;
 }
 
@@ -73,16 +74,8 @@
     align-items: center;
 }
 
-.category1{
-    font-weight: 400;
-    margin-left: 22px;
-    font-size: 16px;
-    text-align: center;
-    color: #414141;
-}
 .category2 {
     font-weight: 600;
-    margin-left: 25px;
     font-size: 16px;
     color: #414141;
 }
