--- a/src/main/webapp/css/wantRecommend.css
+++ b/src/main/webapp/css/wantRecommend.css
@@ -1,20 +1,3 @@
-.btnFloat {
-  background: none;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
-}
-
-.btnFloat:before {
-  content: 'Float';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 120px;
-  height: 50px;
-  border-radius: 5px;
-  transition: all 0.2s ;
-}
-
-.btnBlueGreen.btnFloat:before {
-  background: #00AE68;
+.Button {
+	 background-color: blue;
 }
