--- a/src/main/webapp/css/wantRecommendList.css
+++ b/src/main/webapp/css/wantRecommendList.css
@@ -6,3 +6,17 @@
   td {
     border: 1px solid #444444;
   }
+  
+  button {
+    background-color: #FFFFFF;
+    border: none;
+    font-family: 'Noto Sans KR';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 23px;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #909090;
+    cursor: pointer;
+}
