--- a/src/main/webapp/css/loginForm.css
+++ b/src/main/webapp/css/loginForm.css
@@ -71,7 +71,7 @@
 		#login_btn {
 		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
 		    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
-		    border-radius: 12
+		    border-radius: 12px;
 		    border: none;
 		    color: white;
 		    text-align: center;
