--- a/src/main/webapp/css/registerForm.css
+++ b/src/main/webapp/css/registerForm.css
@@ -126,7 +126,7 @@
     
     font-weight: 500;
     font-size: 14px;
-    color: #909090;
+    color: black;
 
     margin-bottom: 25px;
     padding-bottom: 10px;
