--- a/src/main/webapp/css/wantRecommendForm.css
+++ b/src/main/webapp/css/wantRecommendForm.css
@@ -11,7 +11,6 @@
 
     height: auto;
     background: #FFFFFF;
-    /* border: 1px solid #909090; */
     border-bottom: 0;
 }
 
@@ -57,6 +56,24 @@
     text-align: center;
 }
 
+		.record_btn {
+		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+		    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
+		    border-radius: 12px;
+		    border: none;
+		    color: white;
+		    text-align: center;
+		    display: inline-block;
+		    font-size: 16px;
+		    font-weight: 600;
+		
+		    width: 350px;
+		    padding: 12px 0;
+		    margin: 0 160px;
+		    margin-top:20px;
+		    cursor: pointer;
+		}
+
 
 		#submit_btn {
 		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
@@ -73,5 +90,4 @@
 		    padding: 12px 0;
 		    margin-top:20px;
 		    cursor: pointer;
-		    /* margin: 20px 0 0 -31px; */
 		}
