--- a/src/main/webapp/css/recordForm.css
+++ b/src/main/webapp/css/recordForm.css
@@ -45,13 +45,24 @@
 
 .inputR {
 	display: inline-block;
-    width: 200px;
+    width: 170px;
 
     border: none;
     
     font-weight: 500;
     font-size: 14px;
     color: #909090;
+    margin-bottom: 20px;
+}
+.inputRR {
+	display: inline-block;
+    width: 170px;
+
+    border: none;
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: black;
     margin-bottom: 20px;
 }
 
@@ -68,4 +79,20 @@
     font-weight: 500;
     font-size: 14px;
     color: #414141;
+}
+
+#record_btn {
+    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
+    border-radius: 12px;
+    border: none;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+
+    width: 540px;
+    padding: 12px 0;
+    cursor: pointer;
 }
