--- a/src/main/webapp/css/wantRecommendForm.css
+++ b/src/main/webapp/css/wantRecommendForm.css
@@ -45,12 +45,12 @@
 	border-right : 1px solid black;
 	border-left : 1px solid black;
 	border-bottom : 1px solid black;
-	font-size: 15px;
+	font-size: 14px;
 }
 .b {
 	border-right : 1px solid black;
 	border-bottom : 1px solid black;
-	font-size: 13px;
+	font-size: 14px;
 }
 .gender {
     text-align: center;
@@ -73,6 +73,60 @@
 		    margin-top:20px;
 		    cursor: pointer;
 		}
+		
+		.golist_btn {
+		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+		    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
+		    border-radius: 12px;
+		    border: none;
+		    color: white;
+		    text-align: center;
+		    display: inline-block;
+		    font-size: 16px;
+		    font-weight: 600;
+		
+		    width: 320px;
+		    padding: 12px 0;
+		    margin: 0 30px;
+		    margin-top:20px;
+		    cursor: pointer;
+		}
+		
+		.update_btn {
+		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+		    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
+		    border-radius: 12px;
+		    border: none;
+		    color: white;
+		    text-align: center;
+		    display: inline-block;
+		    font-size: 16px;
+		    font-weight: 600;
+		
+		    width: 150px;
+		    padding: 12px 0;
+		    margin-left: 10px;
+		    margin-top:20px;
+		    cursor: pointer;
+		}
+		.delete_btn {
+		    background: linear-gradient(91.36deg, #556B2F -24.31%, #a8eb8b 130.3%);
+		    box-shadow: 0px -10px 40px rgba(#556B2F, 0.3);
+		    border-radius: 12px;
+		    border: none;
+		    color: white;
+		    text-align: center;
+		    display: inline-block;
+		    font-size: 16px;
+		    font-weight: 600;
+		
+		    width: 150px;
+		    padding: 12px 0;
+			margin-left: 10px;
+		    margin-top:20px;
+		    cursor: pointer;
+		}
+		
 
 
 		#submit_btn {
