--- a/src/main/webapp/css/registerForm.css
+++ b/src/main/webapp/css/registerForm.css
@@ -244,6 +244,22 @@
     display: inline-block;
 }
 
+.regisInbody {
+    display: inline-block;
+    width: 180px;
+
+    border: none;
+    border-bottom: 1px solid #B5B5B5;
+    outline: none;
+    
+    font-weight: 500;
+    font-size: 14px;
+    color: black;
+
+    margin-bottom: 25px;
+    padding-bottom: 10px;
+}
+
 .inputInbody {
     display: inline-block;
     width: 50px;
@@ -258,7 +274,6 @@
 
     margin-bottom: 25px;
     padding-bottom: 10px;
-/*      margin-left: 15px; */
 }
 .viewInbody {
 display: inline-block;
